--- a/image.html
+++ b/image.html
@@ -4,7 +4,7 @@
 </head>
 
 <body>
-   <img src="C:\Users\KUYAdanPC\Downloads\notice.jpg"
+   <img src="notice.jpg"
 	width="1000px" height="1415px">
 
 
